src/objects/Address_GLBL__c.object
<CustomObject>
    <description>Used to capture participant (speaker and attendee) addresses
Created by John A Adams 9/26/2013</description>
    <fields>
        <fullName>Account_GLBL__c</fullName>
        <description>Lookup between addresses and accounts
Created by John A Adams 9/27/2013</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses_GLBL</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Name_MERC__c</fullName>
        <description>Stamped via workflow to ensure Addresses can also be searched for using the name of the Account.  Oliver Dunford 22nd Jan 2014.</description>
        <label>Account Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Combined_MERC__c</fullName>
        <description>Combines all address lines into one field for Search.
Created by John Adams 1/13/14  (Modified on 4/2/2014)</description>
        <formula>IF (NOT (ISBLANK(Line_1_Adrs_Txt_GLBL__c)),  Line_1_Adrs_Txt_GLBL__c,&quot;&quot;)&amp; &quot;&quot; &amp;
IF (NOT (ISBLANK(Line_2_Adrs_Txt_GLBL__c)), &quot;, &quot;&amp; Line_2_Adrs_Txt_GLBL__c, &quot;&quot;) &amp; &quot;&quot; &amp;
IF (NOT (ISBLANK(Line_3_Adrs_Txt_GLBL__c)),  &quot;, &quot;&amp; Line_3_Adrs_Txt_GLBL__c, &quot;&quot;)&amp; &quot;&quot; &amp;
IF (NOT (ISBLANK(Line_4_Adrs_Txt_GLBL__c)),  &quot;, &quot;&amp; Line_4_Adrs_Txt_GLBL__c, &quot;&quot;)&amp; &quot;&quot; &amp;
IF (NOT (ISBLANK(Line_5_Adrs_Txt_GLBL__c)),  &quot;, &quot;&amp; Line_5_Adrs_Txt_GLBL__c, &quot;&quot;)</formula>
        <label>Address Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adrs_Cntry_Cd_GLBL__c</fullName>
        <description>Address Country Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Address Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adrs_Id_GLBL__c</fullName>
        <description>Address Id
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Address Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Of_Nm_GLBL__c</fullName>
        <description>Care of NM
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Care of NM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_GLBL__c</fullName>
        <description>Records city information for address
Created by John A Adams 9/27/2013</description>
        <label>City Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cnty_Nm_GLBL__c</fullName>
        <description>County Name
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>County Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dea_Nbr_GLBL__c</fullName>
        <description>DEA Number
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>DEA Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Date_GLBL__c</fullName>
        <description>Delete Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Del_Flg_GLBL__c</fullName>
        <description>Delete Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Delete Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efctv_End_Dt_GLBL__c</fullName>
        <description>End Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Efctv_Start_Dt_GLBL__c</fullName>
        <description>Effective Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs2_Cntry_Prfx_Cd_GLBL__c</fullName>
        <description>Phone2 Country Prefix Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone2 Country Prefix Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs2_Extnsn_Cd_GLBL__c</fullName>
        <description>Phone2 Extension Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone Number 2 Ext</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs2_Txt_GLBL__c</fullName>
        <description>Phone2 Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone Number 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Cntry_Prfx_Cd_GLBL__c</fullName>
        <description>Phone1 Country Prefix Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone1 Country Prefix Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Elc_Txt_GLBL__c</fullName>
        <description>Email Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Extnsn_Cd_GLBL__c</fullName>
        <description>Phone1 Extension Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone Number 1 Ext</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Fax_Cntry_Prfx_Cd_GLBL__c</fullName>
        <description>Fax Country Prefix Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Fax Country Prefix Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Fax_Extnsn_Cd_GLBL__c</fullName>
        <description>Fax Extension Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Fax Number Ext</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Fax_Txt_GLBL__c</fullName>
        <description>Fax Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Fax Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Txt_GLBL__c</fullName>
        <description>Phone1 Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone Number 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Web_Txt_GLBL__c</fullName>
        <description>Web Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Web Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GCO_Party_Physcl_Adrs_Id_GLBL__c</fullName>
        <description>Party Physical Address Id
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <externalId>true</externalId>
        <label>Party Physical Address Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_License_MERC__c</fullName>
        <description>Associated License numbers pulled from the Customer ODS
Created by John A Adams 10/24/2013</description>
        <label>HCP License</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lat_Coord_Txt_GLBL__c</fullName>
        <description>Latitude Coordinate
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Latitude Coordinate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_1_Adrs_Txt_GLBL__c</fullName>
        <description>Mastered Address Information from ODS.  Oliver Dunford 26th Nov 2013.</description>
        <label>Address Line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_2_Adrs_Txt_GLBL__c</fullName>
        <description>Street Address Line 2
Created by John A Adams 9/27/2013
Updated Field Name from Street_GLBL to Line_2_Adrs_Txt_GLBL KLorenti 10/23/2013</description>
        <label>Address Line 2</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_3_Adrs_Txt_GLBL__c</fullName>
        <description>Address Line 3
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Address Line 3</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Coord_Txt_GLBL__c</fullName>
        <description>Longitude Coordinate
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Longitude Coordinate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Stop_Txt_GLBL__c</fullName>
        <description>Mail Stop Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Mail Stop Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Tmstmp_GLBL__c</fullName>
        <description>Source Load Timestamp
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Source Load Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Usr_GLBL__c</fullName>
        <description>ODS Load User
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>ODS Load User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Tmstmp_GLBL__c</fullName>
        <description>Source Update Timestamp
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Source Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Usr_GLBL__c</fullName>
        <description>ODS Last Update User
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>ODS Last Update User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Cntry_Cd_GLBL__c</fullName>
        <description>Party Country Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Party Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Rcrd_Typ_Cd_GLBL__c</fullName>
        <description>Party Record Type Code

Identifies the type of address (personal, work)
Created by John A Adams 10/22/2013</description>
        <label>Party Record Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physcl_Adrs_Typ_Cd_GLBL__c</fullName>
        <description>Physical Address Type Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Physical Address Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physcl_Adrs_Typ_Desc_GLBL__c</fullName>
        <description>Physical Address Type Description
Customer ODS to Mercury Mapping
Created by John A Adams 12/10/2013</description>
        <label>Physical Address Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Po_Box_Nbr_GLBL__c</fullName>
        <description>PO Box Number
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>PO Box Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Rank_Nbr_GLBL__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Priority Rank Number
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Priority Rank Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pstl_Cd_Extnsn_GLBL__c</fullName>
        <description>Postal Code Extension
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Postal Code Extension</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pstl_Vldtn_Flg_GLBL__c</fullName>
        <description>Postal Validation Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Postal Validation Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cust_Nbr_GLBL__c</fullName>
        <description>SAP Customer Number
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>SAP Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Block_Flg_GLBL__c</fullName>
        <description>Source Block Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Source Block Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Sys_Cd_GLBL__c</fullName>
        <description>Source System Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Source System Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>St_Cd_GLBL__c</fullName>
        <description>Maps to Customer ODS.ST_CD (Region). Created by Oliver Dunford 25th Oct 2013</description>
        <label>Region Code</label>
        <picklist>
            <picklistValues>
                <fullName>State 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WS_Updt_Dt_MERC__c</fullName>
        <description>Portal activity field to record the date of an update. 
Created by John A Adams 2/18/2014</description>
        <label>Web Service Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WS_Updt_HCP_Actn_MERC__c</fullName>
        <description>Portal activity field to record the update action
Created by John A Adams 2/18/2014</description>
        <label>Web Service Update HCP Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_Updt_HCP_Global_ID_MERC__c</fullName>
        <description>Portal activity field to record the updated Global ID
Created by John A Adams 2/18/2014</description>
        <label>Web Service Update HCP Global Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_Updt_HCP_Name_MERC__c</fullName>
        <description>Portal activity field to record the name of the HCP, to indicate that the HCP was the one to make the change.
Created by John A Adams 2/18/2014</description>
        <label>Web Service Update HCP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code_GLBL__c</fullName>
        <description>Zip or Postal Code information for address
Created by John A Adams 9/27/2013</description>
        <label>Zip / Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_GLBL__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Line_1_Adrs_Txt_GLBL__c</columns>
        <columns>Line_2_Adrs_Txt_GLBL__c</columns>
        <columns>City_GLBL__c</columns>
        <columns>Adrs_Cntry_Cd_GLBL__c</columns>
        <columns>Zip_Postal_Code_GLBL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ADR-{000000}</displayFormat>
        <label>Address</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I11000000Cjv1EAC_00N11000000SqLMEA0</fullName>
        <active>true</active>
        <field>Payee_MERC__c.Associated_Address_MERC__c</field>
        <filterItems>
            <field>Address_GLBL__c.Account_GLBL__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account_MERC__c</valueField>
        </filterItems>
        <infoMessage>If you cannot find the record you&apos;re looking for.  Select the &quot;All Fields&quot; option to search across additional criteria.select the &apos;All Fields&apos; option and run your search again.</infoMessage>
        <isOptional>false</isOptional>
        <name>Payee_Associated Address</name>
        <sourceObject>Payee_MERC__c</sourceObject>
    </namedFilters>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Contract_Party_Address</fullName>
        <active>true</active>
        <description>Address for contracting parties</description>
        <label>Contract Party Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Designated_Individual</fullName>
        <active>true</active>
        <description>Address for those designated Individuals who receive Institutional Notifications</description>
        <label>Designated Individual Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mastered_Address</fullName>
        <active>true</active>
        <description>Mastered Addresses from Customer ODS</description>
        <label>Mastered Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Address</fullName>
        <active>true</active>
        <description>Other Non-Mastered addresses such as Vendor addresses, Venue addresses, and Non-HCP Addresses</description>
        <label>Other Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payee_Address</fullName>
        <active>true</active>
        <description>Payee Addresses</description>
        <label>Payee Address</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>